[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage6"
version = "5.0.0a33"
description = "Vantage6 - Privacy-preserving federated learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vantage6 Team"}
]
maintainers = [
    {name = "Frank Martin", email = "f.martin@iknl.nl"},
    {name = "Bart van Beusekom", email = "b.vanbeusekom@iknl.nl"}
]
keywords = ["federated-learning", "privacy", "distributed-computing", "healthcare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "vantage6-common==5.0.0a33",
    "vantage6-client==5.0.0a33",
    "vantage6==5.0.0a33",
    "vantage6-algorithm-tools==5.0.0a33",
    "vantage6-backend-common==5.0.0a33",
    "vantage6-node==5.0.0a33",
    "vantage6-server==5.0.0a33",
    "vantage6-algorithm-store==5.0.0a33",
]

[project.optional-dependencies]
dev = [
    "coverage==7.10.2",
    "black",
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx==8.2.3",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "sphinxcontrib-plantuml",
    "furo",
]

[project.scripts]
v6 = "vantage6.cli.cli:cli_complete"

[project.urls]
Homepage = "https://vantage6.ai"
Documentation = "https://docs.vantage6.ai"
Repository = "https://github.com/vantage6/vantage6"
Issues = "https://github.com/vantage6/vantage6/issues"

[tool.hatch.build.targets.wheel]
packages = [
    "vantage6",
    "vantage6-common",
    "vantage6-client",
    "vantage6-server",
    "vantage6-node",
    "vantage6-algorithm-tools",
    "vantage6-backend-common",
    "vantage6-algorithm-store",
]

# [tool.hatch.build.hooks.custom]
# path = "build_hook.py"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py313']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
