[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage6-algorithm-store"
version = "5.0.0a34"
description = "Vantage6 algorithm store"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vantage6 Team"}
]
maintainers = [
    {name = "Frank Martin", email = "f.martin@iknl.nl"},
    {name = "Bart van Beusekom", email = "b.vanbeusekom@iknl.nl"}
]
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.1",
    "Flask-JWT-Extended==4.7.1",
    "Flask-Principal==0.4.0",
    "Flask-RESTful==0.3.10",
    "gevent==25.4.2",
    "jsonschema==4.21.1",
    "marshmallow==3.19.0",
    "python-keycloak==5.5.0",
    "requests==2.32.4",
    "schema==0.7.5",
    "sqlalchemy==2.0.37",
    "vantage6-common==5.0.0a34",
    "vantage6==5.0.0a34",
]

[project.optional-dependencies]
dev = [
    "coverage==7.10.2",
    "black",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["vantage6"]

[tool.hatch.build.targets.wheel.sources]
"vantage6" = "vantage6"
