[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage6-backend-common"
version = "5.0.0a47"
description = "Vantage6 backend common utilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vantage6 Team"}
]
maintainers = [
    {name = "Frank Martin", email = "f.martin@iknl.nl"},
    {name = "Bart van Beusekom", email = "b.vanbeusekom@iknl.nl"}
]
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.1",
    "flask-cors==6.0.0",
    "Flask-JWT-Extended==4.7.1",
    "Flask-Mail==0.9.1",
    "flask-marshmallow==0.15.0",
    "Flask-Principal==0.4.0",
    "Flask-RESTful==0.3.10",
    # TODO remove httpx once 1.0.0 is released - atm this is added to prevent 1.0.dev3 is installed
    "httpx==0.28.1",
    "marshmallow==3.20.2",
    "marshmallow-sqlalchemy==1.4.0",
    "prometheus-client==0.21.1",
    "python-keycloak==5.5.0",
    "sqlalchemy==2.0.37",
    "werkzeug==3.1.4",
    "requests==2.32.4",
    "vantage6-common==5.0.0a47",
]

[project.optional-dependencies]
dev = [
    "coverage==7.10.2",
    "black",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["vantage6"]

[tool.hatch.build.targets.wheel.sources]
"vantage6" = "vantage6"
