[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage6-client"
version = "5.0.0a46"
description = "Vantage6 client library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vantage6 Team"}
]
maintainers = [
    {name = "Frank Martin", email = "f.martin@iknl.nl"},
    {name = "Bart van Beusekom", email = "b.vanbeusekom@iknl.nl"}
]
requires-python = ">=3.13"
dependencies = [
    # TODO remove httpx once 1.0.0 is released - atm this is added to prevent 1.0.dev3 is installed
    "httpx==0.28.1",
    "pyfiglet==1.0.4",
    "python-keycloak==5.5.0",
    "rich==13.5.2",
    "vantage6-common==5.0.0a46",
]

[project.optional-dependencies]
dev = [
    "coverage==7.10.2",
    "black",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["vantage6"]

[tool.hatch.build.targets.wheel.sources]
"vantage6" = "vantage6"
