[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage6-common"
version = "5.0.0a33"
description = "Vantage6 common utilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vantage6 Team"}
]
maintainers = [
    {name = "Frank Martin", email = "f.martin@iknl.nl"},
    {name = "Bart van Beusekom", email = "b.vanbeusekom@iknl.nl"}
]
requires-python = ">=3.13"
dependencies = [
    "appdirs==1.4.4",
    "click==8.1.3",
    "colorama==0.4.6",
    "docker==7.1.0",
    "ipython==8.10.0",
    "jinja2==3.1.6",
    "pandas>=2.2.3",
    "pyfiglet==1.0.3",
    "questionary==1.10.0",
    "rich==13.5.2",
    "schema==0.7.5",
    "sqlalchemy==2.0.37",
]

[project.optional-dependencies]
dev = [
    "coverage==7.10.2",
    "black",
    "pre-commit",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["vantage6"]

[tool.hatch.build.targets.wheel.sources]
"vantage6" = "vantage6"
