[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage6-node"
version = "5.0.0a34"
description = "vantage6 node"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vantage6 Team"}
]
maintainers = [
    {name = "Frank Martin", email = "f.martin@iknl.nl"},
    {name = "Bart van Beusekom", email = "b.vanbeusekom@iknl.nl"}
]
requires-python = ">=3.13"
dependencies = [
    "click==8.1.3",
    "gevent==25.4.2",
    "jinja2==3.1.6",
    "kubernetes==28.1.0",
    "nvidia-ml-py==12.535.133",
    "parquet-tools==0.2.16",
    "psutil==7.0.0",
    "python-socketio==5.7.2",
    "requests==2.32.4",
    "vantage6==5.0.0a34",
    "vantage6-client==5.0.0a34",
    "vantage6-common==5.0.0a34",
]

[project.optional-dependencies]
dev = [
    "coverage==7.10.2",
    "black",
    "pre-commit",
]

[project.scripts]
vnode-local = "vantage6.node.cli.node:cli_node"

[tool.hatch.build.targets.wheel]
packages = ["vantage6"]

[tool.hatch.build.targets.wheel.sources]
"vantage6" = "vantage6"
