[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage6-server"
version = "5.0.0a34"
description = "Vantage6 server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vantage6 Team"}
]
maintainers = [
    {name = "Frank Martin", email = "f.martin@iknl.nl"},
    {name = "Bart van Beusekom", email = "b.vanbeusekom@iknl.nl"}
]
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "flask==3.1.1",
    "Flask-JWT-Extended==4.7.1",
    "Flask-Principal==0.4.0",
    "Flask-RESTful==0.3.10",
    "Flask-SocketIO==5.3.6",
    "gevent==25.4.2",
    "ipython==8.10.0",
    "kombu==5.5.4",
    "marshmallow==3.19.0",
    "names_generator==0.2.0",
    "prometheus-client==0.21.1",
    "pyjwt==2.9.0",
    "python-keycloak==5.5.0",
    "requests==2.32.4",
    "requests-oauthlib==1.3.1",
    "schema==0.7.5",
    "sqlalchemy==2.0.37",
    "traitlets==5.8.1",
    "werkzeug==3.1.3",
    "vantage6==5.0.0a34",
    "vantage6-common==5.0.0a34",
]

[project.optional-dependencies]
dev = [
    "coverage==7.10.2",
    "black",
    "pre-commit",
]

[project.scripts]
vserver-local = "vantage6.server.cli.server:cli_server"

[tool.hatch.build.targets.wheel]
packages = ["vantage6"]

[tool.hatch.build.targets.wheel.sources]
"vantage6" = "vantage6"

[tool.setuptools.packages.find]
where = ["vantage6/server"]

[tool.setuptools.package-data]
"vantage6/server/" = ["_data"]