[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage6"
version = "5.0.0a34"
description = "vantage6 command line interface"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vantage6 Team"}
]
maintainers = [
    {name = "Frank Martin", email = "f.martin@iknl.nl"},
    {name = "Bart van Beusekom", email = "b.vanbeusekom@iknl.nl"}
]
requires-python = ">=3.13"
dependencies = [
    "click==8.1.3",
    "colorama==0.4.6",
    "copier==9.9.1",
    "docker==7.1.0",
    "ipython==8.10.0",
    "jinja2==3.1.6",
    "kubernetes==28.1.0",
    "pandas>=2.2.3",
    "questionary==1.10.0",
    "rich==13.5.2",
    "schema==0.7.5",
    "sqlalchemy==2.0.37",
    "vantage6-common==5.0.0a34",
    "vantage6-client==5.0.0a34",
]

[project.optional-dependencies]
dev = [
    "coverage==7.10.2",
    "black",
    "pre-commit",
]

[project.scripts]
v6 = "vantage6.cli.cli:cli_complete"

[tool.hatch.build.targets.wheel]
packages = ["vantage6"]

[tool.hatch.build.targets.wheel.sources]
"vantage6" = "vantage6"

[tool.setuptools.packages.find]
where = ["vantage6/cli"]

[tool.setuptools.package-data]
"vantage6/cli/" = [
    "rabbimq/rabbitmq.config",
    "template/node_config.j2",
    "template/server_config.j2",
    "template/server_import_config.j2",
    "template/algo_store_config.j2",
    "dev/data/olympic_athletes_2016.csv",
    "dev/data/km_dataset.csv",
    "prometheus/prometheus.yml",
]